--- a/app/src/main/res/layout/color_picker.xml
+++ b/app/src/main/res/layout/color_picker.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/princpl"
+    android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -43,7 +43,7 @@
             tools:ignore="ButtonStyle" />
 
         <Button
-            android:id="@+id/kafka"
+            android:id="@+id/brown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/sircul_k"
@@ -58,7 +58,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/blu"
+            android:id="@+id/blue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/sircul_blue"
@@ -87,7 +87,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/bla"
+            android:id="@+id/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/sircul_b"
@@ -101,7 +101,7 @@
             tools:ignore="ButtonStyle" />
 
         <Button
-            android:id="@+id/whit"
+            android:id="@+id/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/sircul_white"
@@ -109,7 +109,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/cancer"
+        android:id="@+id/cancel_btn"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
