--- a/app/src/main/res/layout/point_config.xml
+++ b/app/src/main/res/layout/point_config.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/skb"
+    android:id="@+id/relative_main_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
@@ -9,7 +9,7 @@
     android:layout_gravity="center">
 
     <SeekBar
-        android:id="@+id/sick"
+        android:id="@+id/seek_bar"
         android:max="30"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -18,11 +18,11 @@
         android:layout_marginTop="33dp" />
 
     <Button
-        android:id="@+id/ocai"
+        android:id="@+id/ok_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/cancel"
-        android:layout_alignBottom="@+id/cancel"
+        android:layout_alignBaseline="@+id/cancel_btn"
+        android:layout_alignBottom="@+id/cancel_btn"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginEnd="19dp"
@@ -32,12 +32,12 @@
         android:textColor="@color/colorAccent" />
 
     <Button
-        android:id="@+id/cancel"
+        android:id="@+id/cancel_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/ocai"
-        android:layout_alignRight="@+id/ocai"
-        android:layout_below="@+id/sick"
+        android:layout_alignEnd="@+id/ok_btn"
+        android:layout_alignRight="@+id/ok_btn"
+        android:layout_below="@+id/seek_bar"
         android:layout_marginEnd="73dp"
         android:layout_marginRight="73dp"
         android:layout_marginTop="39dp"
@@ -61,12 +61,12 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/cuanto"
+        android:id="@+id/point_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/sick"
-        android:layout_alignEnd="@+id/ocai"
-        android:layout_alignRight="@+id/ocai"
+        android:layout_above="@+id/seek_bar"
+        android:layout_alignEnd="@+id/ok_btn"
+        android:layout_alignRight="@+id/ok_btn"
         android:layout_marginEnd="17dp"
         android:layout_marginRight="17dp"
         android:textColor="@android:color/darker_gray"
