--- a/app/src/main/res/layout/info.xml
+++ b/app/src/main/res/layout/info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/inte2"
+    android:background="@mipmap/info_bkg"
     android:orientation="vertical"
     android:id="@+id/info_layout"
     android:weightSum="10">
